fixed background image display issues on iphone

--- a/src/App.css
+++ b/src/App.css
@@ -60,24 +60,23 @@ p, h1, h2, h3, h4, h5, h6 {
   color: #503076;
 }
 
-/* .blob-shape {
-  width: 50%; 
-  height: 10rem;
-  background-color: #503076;
-  border-radius: 60% 40% 50% 50% / 40% 50% 60% 50%;
-} */
 
 .home-container {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url('src/images/pharma_maya.jpg');
-  background-size: cover;
-  background-position: center 4rem;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+}
+
+.background-image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  background-size: cover;
+  background-position: center 4rem;
+  
 }
 
 .home-content{
@@ -292,8 +291,7 @@ p, h1, h2, h3, h4, h5, h6 {
   flex-direction: column;
   justify-content: center;
   gap: 1rem;
-  height: 12rem;
-  min-height: fit-content;
+  height: fit-content;
   width: 100%;
   color: #503076;
   background-color: #f6f6f6;
@@ -367,8 +365,8 @@ iframe {
 }
 
 @media (max-width: 370px) {
-  .home-container, .about-container, .medications-and-supplies-container, .accepted-insurances-container{
-    height: 100.5vh;
+  .home-container{
+    height: 103vh;
   }
 }
 
@@ -376,6 +374,9 @@ iframe {
 @media (max-width: 740px) {
 .about-container{
     padding-top: 5rem;
+  }
+ .about-container, .medications-and-supplies-container, .accepted-insurances-container, .footer-container {
+    height: fit-content !important;
   }
 }
 @media (max-width: 840px) {
